--- a/instagram-caption-generator/requirements.txt
+++ b/instagram-caption-generator/requirements.txt
@@ -1,6 +1,9 @@
 flask==2.0.1
 python-dotenv==0.19.0
 google-generativeai==0.3.0
+flask==2.0.1
+python-dotenv==0.19.0
+google-generativeai==0.3.0
 annotated-types==0.7.0
 anyio==4.7.0
 blinker==1.9.0
